--- a/src/main/resources/ru/yarsu/public/css/style.css
+++ b/src/main/resources/ru/yarsu/public/css/style.css
@@ -1,3 +1,21 @@
 .full-size {
-    width: 100vh;
+	width: 100vh;
+}
+
+.underline:hover:after,
+.underline:focus:after {
+	width: 100%;
+}
+
+.underline:hover {
+	color: #fff;
+}
+
+.underline:after {
+	display: block;
+	content: "";
+	height: 2px;
+	width: 0%;
+	background-color: #fff;
+	transition: width 0.4s ease-in-out;
 }
